fix(backend): add missing access_token to response
